--- a/train.ipynb
+++ b/train.ipynb
@@ -51,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Загружаем данные для обучения"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -59,7 +66,7 @@
     "data = pd.read_csv('/home/ssd2/tag_video/baseline/train_data_categories.csv')\n",
     "tags = pd.read_csv('/home/ssd2/tag_video/baseline/IAB_tags.csv')\n",
     "\n",
-    "video_data = pd.read_csv('video_feat.csv', index_col='video_id')"
+    "video_data = pd.read_csv('video_feat.csv', index_col='video_id') # фичи из extract_video.py"
    ]
   },
   {
@@ -79,8 +86,15 @@
     }
    ],
    "source": [
-    "all_video_data = video_data.values[:, 1:].astype('float') # for augs\n",
+    "all_video_data = video_data.values[:, 1:].astype('float') # для аугментаций\n",
     "all_video_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Правим теги в датасете, чтобы хорошо парсились"
    ]
   },
   {
@@ -139,6 +153,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Берем только те теги для обучения, для которых минимум 10 сэмплов в датасете"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -158,6 +179,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Разбиваем данные на 5 фолдов"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -170,6 +198,13 @@
     "        split_list += [(train_index, test_index)]\n",
     "    return split_list\n",
     "split_list = standart_split(data, data['tags'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Класс датасета"
    ]
   },
   {
@@ -229,6 +264,13 @@
     "                        video_feat[i] = video_feat[i] * (0.95 + 0.1 * random.random())\n",
     "\n",
     "        return tok, full_target, video_feat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Класс нашей модели"
    ]
   },
   {
@@ -312,6 +354,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Собираем батч"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -350,6 +399,13 @@
    "outputs": [],
    "source": [
     "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Подсчет метрики"
    ]
   },
   {
@@ -403,6 +459,13 @@
     "        counter+=1\n",
     "\n",
     "    return iou/counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Предсказываем валидацию, считаем метрику с лучшим порогом "
    ]
   },
   {
@@ -473,6 +536,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Обучаем модельку"
+   ]
   },
   {
    "cell_type": "code",
@@ -4120,6 +4190,13 @@
     "    del model\n",
     "    gc.collect()\n",
     "    torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Смотрим метрики и лучшую эпоху"
    ]
   },
   {
